# jraphzzz

./: .gitignore  .readthedocs.yml  CONTRIBUTING.md  README.md  pyproject.toml  readthedocs.yml  requirements.txt
.github/workflows/: build_docs.yml  tests.yml
contrib/: nbg.py  tgat.py  utils.py
docs/: conf.py  data.rst  examples.rst  index.rst  quickstart.rst  requirements.txt
docs/examples/: cora.md  cora_gcn.md  cora_gcn_tutorial.md  mutag.md  wget-log
examples/: cora.py  mutag.py
jraph/: __init__.py  utils.py
jraph/data/: downloads.py
jraph/experimental/: sharded_graphnet.py
jraph/nn/: base.py  layers.py  models.py
jraph/tests/: models_test.py  utils_test.py
jraphzzz/: __init__.py  utils.py
jraphzzz/data/: data.py  graph.py  sharded.py  temporal_graph.py
jraphzzz/data/download/: cora.py
jraphzzz/experimental/: sharded_graphnet.py  sharded_graphnet_test.py
jraphzzz/nn/: __init__.py  base.py  layers.py  models.py  types.py
jraphzzz/nn/layers/: __init__.py  cheb_conv.py  deepsets.py  graph_attention.py  graph_conv.py  sage_conv.py  temporal_gat.py
jraphzzz/nn/models/: __init__.py  gat.py  interaction_net.py  relation_net.py  tgat.py
jraphzzz/tests/: models_test.py  utils_test.py
jraphzzz/utils/: __init__.py  chem.py  coalesce.py  laplacian.py  line_graph.py  scatter.py  self_loops.py  utils.py
tests/: models_test.py  sharded.py  utils_test.py
