[tool.poetry]
name = "jraph"
# Poetry normally requires a static version string here. If you
# prefer reading version from `jraph.__version__`, consider using
# the poetry-dynamic-versioning plugin; otherwise replace "0.0.0"
# with the package version you want to publish.
version = "0.0.0"
description = "Jraph: A library for Graph Neural Networks in Jax"
readme = "README.md"
license = "Apache-2.0"
authors = ["DeepMind <jax_graph_nets@google.com>"]
homepage = "https://github.com/deepmind/jraph"
repository = "https://github.com/deepmind/jraph"
keywords = ["jax", "graph", "neural networks", "python", "machine learning"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

# Tell poetry which package(s) to include
# If your package layout differs (e.g. source in src/), update accordingly.
packages = [
  { include = "jraph" }
]

[[tool.poetry.include]]
# include package test data files so packaging contains them
path = "jraph/ogb_examples/test_data"
# this includes the whole directory tree; adjust path if needed

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
# runtime dependencies (modern minimums — JAX 0.6 series)
jax = ">=0.6.0"
jaxlib = ">=0.6.0"
numpy = ">=1.26"

[tool.poetry.extras]
# Optional feature sets (installable via pip .[examples] or pip editable)
examples = ["dm-haiku", "absl-py", "frozendict", "optax", "scipy", "flax"]
ogb_examples = ["dm-haiku", "absl-py", "optax", "pandas", "dm-tree"]

[tool.poetry.dev-dependencies]
# development & testing tools
pytest = ">=8.4"
setuptools = ">=61.0"   # included per your earlier request (useful for some dev workflows)
wheel = ">=0.38"
build = ">=0.10"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"