[project]
name = "jraphzzz"
version = "0.0.7dev0"
description = "Jraphzzz: A library for Graph Neural Networks in Jax"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
  { name = "DeepMind", email = "jax_graph_nets@google.com" }
]
requires-python = ">=3.10,<4.0"
keywords = ["jax", "graph", "neural networks", "python", "machine learning"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "jax>=0.6.0",
  "jaxlib>=0.6.0",
  "numpy>=1.26",
]

[project.optional-dependencies]
examples = ["frozendict", "optax", "scipy", "flax", "rdkit"]
dev = [
  "pytest>=8.4",
  "setuptools>=61.0",
  "wheel>=0.38",
  "build>=0.10"
]

[project.urls]
Homepage = "https://github.com/syedzayyan/jraphzzz"
Repository = "https://github.com/syedzayyan/jraphzzz"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"
